--- a/信息统计（--短信统计）.html
+++ b/信息统计（--短信统计）.html
@@ -151,7 +151,7 @@
         <div id="u592_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u593" class="text">
-          <p><span>图文动态数量 11</span></p>
+          <p><span>图文视频消息 11</span></p>
         </div>
       </div>
 
