--- a/概述.html
+++ b/概述.html
@@ -66,7 +66,7 @@
         <div id="u8_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u9" class="text">
-          <p><span>消息发布</span></p>
+          <p><span>视频动态发布</span></p>
         </div>
       </div>
 
@@ -102,7 +102,7 @@
         <div id="u16_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u17" class="text">
-          <p><span>消息发布</span></p>
+          <p><span>视频动态发布</span></p>
         </div>
       </div>
 
@@ -138,7 +138,7 @@
         <div id="u24_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u25" class="text">
-          <p><span>消息发布：</span></p><p><span>在班级空间-发布动态中支持视频、图片、音频类信息发布</span></p>
+          <p><span>视频动态发布：</span></p><p><span>在班级空间-发布动态中支持视频、图片、音频类信息发布</span></p>
         </div>
       </div>
     </div>
