--- a/发办公短信.html
+++ b/发办公短信.html
@@ -134,7 +134,7 @@
         <div id="u1254_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1255" class="text">
-          <p><span>办公短信</span></p>
+          <p><span>发办公短信</span></p>
         </div>
       </div>
 
@@ -247,7 +247,7 @@
         <div id="u1278_div" class=""></div>
         <!-- Unnamed () -->
         <div id="u1279" class="text">
-          <p><span>办公短信</span></p>
+          <p><span>发办公短信</span></p>
         </div>
       </div>
 
@@ -257,6 +257,33 @@
         <!-- Unnamed () -->
         <div id="u1281" class="text">
           <p><span>高老师，王二狗老师，田辉老师，诸葛亮，</span></p><p><span>欧阳某某</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1282" class="ax_default box_1">
+        <div id="u1282_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u1283" class="text" style="display:none; visibility: hidden">
+          <p><span></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1284" class="ax_default label">
+        <div id="u1284_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u1285" class="text">
+          <p><span>发送完毕！</span></p><p><span><br></span></p><p><span>发送成功（25）</span></p><p><span><br></span></p><p><span>发送失败（3）：### ### ## ####</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u1286" class="ax_default primary_button">
+        <div id="u1286_div" class=""></div>
+        <!-- Unnamed () -->
+        <div id="u1287" class="text">
+          <p><span>确定</span></p>
         </div>
       </div>
     </div>
