--- a/信息统计_1.html
+++ b/信息统计_1.html
@@ -260,6 +260,9 @@
                 </div>
               </div>
 
+              <!-- Unnamed (单元格) [footnote] -->
+              <div id="u1904_ann" class="annotation"></div>
+
               <!-- Unnamed (单元格) -->
               <div id="u1906" class="ax_default table_cell">
                 <img id="u1906_img" class="img " src="images/信息统计_1/u1906.png"/>
